--- a/index.html
+++ b/index.html
@@ -20,22 +20,21 @@
 <!-- heres my nav bar header -->
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Logo</a>
+    <img class="navbar-brand" src="https://i.pinimg.com/736x/d0/1d/1b/d01d1b3515ad9953a27afeab6781b25f.jpg" >
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>-->
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/mmandelyn" target="_blank">
               All of my REPOs
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/mmandelyn/glowing-goose-echo" target="something"> This REPO</a>
+          <a class="nav-link" href="https://github.com/mmandelyn/glowing-goose-echo" target="something"> 
+              This REPO
+          </a>
         </li>
       </ul>
     </div>
@@ -93,8 +92,6 @@
 
 
 </footer>
-
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
