--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- heres my nav bar header -->
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
-    <img class="navbar-brand" src="https://i.pinimg.com/736x/d0/1d/1b/d01d1b3515ad9953a27afeab6781b25f.jpg" >
+    <img class="navbar-brand" src="https://i.pinimg.com/736x/d0/1d/1b/d01d1b3515ad9953a27afeab6781b25f.jpg" alt="gamer logo">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
