--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     © 2024 Copyright:  
     <a class="text-body" href="https://gist.github.com/barrycumbie/2734a9660bacf7cbcc73c65abee0a1c6" target="_blank">Lab Instructions</a>
     |||
-    <a class="text-body" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fbarrycumbie.github.io%2Fwhatever-thing-echo%2F" target="nu">Verify this page's validity.</a>
+    <a class="text-body" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmmandelyn.github.io%2Fglowing-goose-echo%2F" target="nu">Verify this page's validity.</a>
 
   </div>
 
